[tool.poetry]
name = "google-sheets-wrapper"
version = "2.0.0"
description = "A library wrapping Google Sheets API to make some operations easier"
authors = ["Jakub Valenta <jakub@jakubvalenta.cz>"]
license = "Apache Software License"
readme = "README.md"
packages = [{include = "google_sheets_wrapper"}]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^2.62.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
